# NeuraFlux

./: README.md  combined_sim_plots.py  main_building.py  main_electric_vehicle.py  main_storage.py  pyproject.toml  scenario_tree  tree
neuraflux/: global_variables.py  local_typing.py  simulation.py  time_ref.py  utils_visualizations.py  visualizations_q_factors.py  weather_ref.py
neuraflux/agency/: agent.py  module.py  products.py  tariffs.py
neuraflux/agency/config/: config_module.py
neuraflux/agency/control/: control_module.py  control_utils.py  ddqn.py  pareto.py  replay_buffer.py  rl_training.py  scenario_tree.py
neuraflux/agency/data/: data_module.py  scaling_utils.py  time_features.py
neuraflux/agency/datasets/: dynamic_pricing_2023.csv  hoep_interpolated_2023.csv  visualize.py
neuraflux/agency/prediction/: prediction_module.py
neuraflux/assets/: Digraph.gv  asset.py  building.py  electric_vehicle.py  energy_storage.py  industrial_process_0.py  industrial_process_1.py
neuraflux/schemas/: base.py  config.py  control.py  state.py
neuraflux/visualizations/: Digraph.gv  decision_tree.py  distributions_shift.py  dr_energy.py  ghg_heatmap.py  profit_graph.py  risk_profiles.py
pages/: 2_📄_Paper_Figures.py  3_📈_Signals_Visualization.py  4_💰_Reward_Analysis.py  5_📊_Q_Factors_Analysis.py  6_⚙️_Configuration.py
tests/: test_ddqn.py
tests/assets/: test_building.py  test_energy_storage.py
