[tool.poetry]
name = "neuraflux"
version = "1.0.0"
description = "Agency intelligence for distributed energy resources."
authors = ["Ysael Desage <ysael.desage@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.0.3"
pandas = "^2.0.3"
pandas-stubs = "^2.0.2.230605"
dill = "^0.3.7"
meteostat = "^1.6.5"
graphviz = "^0.20.1"
black = "^23.7.0"
plotly = "^5.16.1"
tensorflow = "^2.13.0"
scikit-learn = "^1.3.0"
streamlit = "^1.28.1"
watchdog = "^3.0.0"
matplotlib = "^3.8.2"
joypy = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
bandit = "*"
black = "*"
isort = "*"
mypy = "*"
pylint = "*"
pytest = "*"
pytest-mock = "*"
types-pytz = "*"
pytest-asyncio = "^0.20.3"
flake8 = ">=5.0.0,<6.0.0"

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true

[tool.pylint.messages_control]
disable = [
  "fixme",
  "missing-docstring",
  "no-name-in-module",                # mypy takes care of this
  "too-few-public-methods",           # Dataclasses triggers this error
  "invalid-name",                     # Too many false positives
  "too-many-instance-attributes",     # Some class do exceed 7 attributes
  "too-many-arguments",               # At least one class has a function that exceeds 5 args 
  "no-self-argument",                 # Pydantic classes trigger this error
  "unsubscriptable-object",           # Triggered by attrs
  "unsupported-assignment-operation", # Triggered by attrs
  "logging-fstring-interpolation",    # Disabled until the logging PR is merged
  "too-many-locals",                  # Disabled until we can do some maintenance
  "too-many-public-methods",          # Disabled until we can do some maintenance
  "too-many-lines",                   # Disabled until we can do some maintenance
  "too-many-statements",              # Disabled until we can do some maintenance
  "too-many-branches",                # Disabled until we can do some maintenance
  "too-many-return-statements",       # Disabled until we can do some maintenance
  "too-many-function-args",           # Disabled until we can do ≤some maintenance
  "R0801",                            # Duplicated lines. Disabled until we can do some maintenance
]

[tool.pytest.ini_options]
addopts = "--tb=short -v  -s"
minversion = "7.0"
testpaths = ["tests"]